调整首页布局，显示微博按钮

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,13 +2,13 @@
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
 
         <android.support.design.widget.AppBarLayout
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
@@ -112,6 +112,7 @@
             android:id="@+id/container_statuses"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_below="@id/appbar"
             android:background="@color/colorBgNormal">
 
         </FrameLayout>
@@ -121,7 +122,8 @@
             android:id="@+id/btn_add"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="bottom|end"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
             android:layout_margin="16dp"
             android:src="@drawable/ic_add_white"
             app:backgroundTint="@color/colorHighlight"
@@ -137,5 +139,5 @@
         <!--android:src="@drawable/ic_add_white"-->
         <!--app:backgroundTint="@color/colorPrimary"-->
         <!--app:fabSize="normal" />-->
-    </LinearLayout>
+    </RelativeLayout>
 </layout>
