好友分组选择弹出框：1、完善弹出框显示逻辑：点击弹出、收回；新增group数据请求接口；RecyclerView四列显示group数据；

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent"
@@ -102,4 +105,11 @@
             </LinearLayout>
         </android.support.design.widget.AppBarLayout>
     </LinearLayout>
+        <View
+            android:id="@+id/translucent_mask"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"
+            android:background="#66000000"/>
+    </RelativeLayout>
 </layout>
