--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -53,12 +53,37 @@
                         android:layout_marginBottom="12dp"
                         android:drawableLeft="@drawable/ic_search_edittext_left"
                         android:hint="搜索"
+                        android:imeOptions="actionSearch"
+                        android:singleLine="true"
+                        android:inputType="text"
                         android:textColorHint="@color/colorTextLevel3"
                         android:textColor="@color/colorTextLevel1"
                         android:textSize="16sp"
                         android:background="@drawable/et_search"/>
                 </LinearLayout>
             </android.support.v7.widget.Toolbar>
+            <android.support.design.widget.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="200dp"
+                android:layout_height="30dp"
+                app:layout_collapseMode="pin"
+                app:tabIndicatorColor="@color/colorHighlight"
+                app:tabIndicatorHeight="2dp"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/colorHighlight"
+                app:tabTextColor="@color/colorTextLevel2" />
         </android.support.design.widget.AppBarLayout>
+        <LinearLayout
+            android:id="@+id/ll_preview"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorBgNormal"
+            android:orientation="vertical">
+
+        </LinearLayout>
+        <android.support.v4.view.ViewPager
+            android:id="@+id/viewPager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
     </LinearLayout>
 </layout>
