--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -43,19 +43,29 @@
                     android:fitsSystemWindows="true"
                     app:layout_collapseParallaxMultiplier="0.1"
                     app:layout_collapseMode="parallax">
-                    <ImageView
-                        android:id="@+id/iv_cover"
+                    <FrameLayout
+                        android:id="@+id/fl_cover"
                         android:layout_width="match_parent"
                         android:layout_height="120dp"
-                        android:scaleType="centerCrop"
-                        android:fitsSystemWindows="true"
-                        android:background="#eee"
-                        android:imageUrl="@{user.cover_image_phone}"/>
+                        android:fitsSystemWindows="true">
+                        <ImageView
+                            android:id="@+id/iv_cover"
+                            android:layout_width="match_parent"
+                            android:layout_height="120dp"
+                            android:scaleType="centerCrop"
+                            android:background="#eee"
+                            android:imageUrl="@{user.cover_image_phone}"/>
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:background="#44ffffff"/>
+                    </FrameLayout>
+
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:id="@+id/iv_head"
                         android:layout_width="60dp"
                         android:layout_height="60dp"
-                        android:layout_below="@id/iv_cover"
+                        android:layout_below="@id/fl_cover"
                         android:layout_marginTop="-30dp"
                         android:imageUrl="@{user.avatar_large}"
                         android:transitionName="shareAvatar"
@@ -68,7 +78,7 @@
                         android:layout_width="@dimen/btn_follow_width"
                         android:layout_height="@dimen/btn_follow_height"
                         android:layout_alignParentRight="true"
-                        android:layout_below="@id/iv_cover"
+                        android:layout_below="@id/fl_cover"
                         android:layout_marginRight="@dimen/fab_margin"
                         android:layout_marginTop="8dp"
                         android:background="@drawable/btn_follow"
