--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -42,6 +42,15 @@
                 android:text="@string/app_name"
                 android:textColor="@color/colorHighlight"
                 android:textSize="20sp"/>
+            <TextView
+                android:id="@+id/tv_version"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_name"
+                android:layout_marginTop="8dp"
+                android:layout_centerHorizontal="true"
+                android:textColor="@color/colorTextLevel2"
+                android:textSize="14sp"/>
             <com.makeramen.roundedimageview.RoundedImageView
                 android:layout_width="80dp"
                 android:layout_height="80dp"
@@ -53,7 +62,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_name"
+                android:layout_below="@id/tv_version"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
                 <TextView
@@ -61,7 +70,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="30dp"
+                    android:layout_marginTop="@dimen/fab_margin"
                     android:text="开发者：CodeZ"
                     android:textColor="@color/colorTextLevel2"
                     android:textSize="16sp"/>
@@ -71,7 +80,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@id/tv_coder"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="@dimen/fab_margin"
                     android:text="CSDN博客"
                     android:textColor="@color/colorHighlight"
                     android:textSize="16sp"/>
@@ -81,7 +90,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@id/tv_coder"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="@dimen/fab_margin"
                     android:text="codezzz@163.com"
                     android:textColor="@color/colorHighlight"
                     android:textSize="16sp"/>
@@ -91,7 +100,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerHorizontal="true"
                     android:layout_below="@id/tv_coder"
-                    android:layout_marginTop="15dp"
+                    android:layout_marginTop="@dimen/fab_margin"
                     android:text="GitHub"
                     android:textColor="@color/colorHighlight"
                     android:textSize="16sp"/>
