--- a/app/src/main/res/layout/activity_status_detail.xml
+++ b/app/src/main/res/layout/activity_status_detail.xml
@@ -184,24 +184,22 @@
                             android:layout_width="match_parent"
                             android:layout_height="22dp"
                             android:layout_marginTop="10dp"
-                            android:orientation="horizontal"
-                            android:paddingRight="@dimen/fab_margin">
+                            android:gravity="right"
+                            android:paddingLeft="@dimen/fab_margin"
+                            android:paddingRight="@dimen/fab_margin"
+                            android:orientation="horizontal">
+
 
                             <LinearLayout
-                                android:layout_width="0dp"
+                                android:id="@+id/block_like"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="3">
-
-                            </LinearLayout>
-
-                            <LinearLayout
-                                android:layout_width="0dp"
-                                android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:gravity="center"
+                                android:gravity="center_vertical|right"
+                                android:minWidth="70dp"
                                 android:orientation="horizontal">
 
                                 <ImageView
+                                    android:id="@+id/iv_like"
                                     android:layout_width="18dp"
                                     android:layout_height="18dp"
                                     android:src="@drawable/ic_like" />
@@ -217,10 +215,11 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_width="0dp"
+                                android:id="@+id/block_comment"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:gravity="center"
+                                android:gravity="center_vertical|right"
+                                android:minWidth="70dp"
                                 android:orientation="horizontal">
 
                                 <ImageView
@@ -239,10 +238,11 @@
                             </LinearLayout>
 
                             <LinearLayout
-                                android:layout_width="0dp"
+                                android:id="@+id/block_repost"
+                                android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
-                                android:layout_weight="1"
-                                android:gravity="center"
+                                android:gravity="center_vertical|right"
+                                android:minWidth="70dp"
                                 android:orientation="horizontal">
 
                                 <ImageView
@@ -260,6 +260,18 @@
                                     android:textSize="12sp" />
                             </LinearLayout>
 
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="1"
+                                android:gravity="center"
+                                android:orientation="horizontal"
+                                android:visibility="gone">
+                                <ImageView
+                                    android:layout_width="16dp"
+                                    android:layout_height="16dp"
+                                    android:src="@drawable/ic_weibo_share" />
+                            </LinearLayout>
                         </LinearLayout>
                     </LinearLayout>
 
@@ -339,7 +351,7 @@
                         android:layout_width="@dimen/toolbar_icon_size"
                         android:layout_height="@dimen/toolbar_icon_size"
                         android:layout_alignParentRight="true"
-                        android:layout_centerVertical="true"
+                        android:layout_gravity="center_vertical"
                         android:src="@drawable/ic_post_send" />
                 </LinearLayout>
                 <RelativeLayout
