--- a/app/src/main/res/layout/item_status.xml
+++ b/app/src/main/res/layout/item_status.xml
@@ -146,6 +146,7 @@
             android:orientation="horizontal">
 
             <ImageView
+                android:id="@+id/iv_like"
                 android:layout_width="18dp"
                 android:layout_height="18dp"
                 android:src="@drawable/ic_like" />
