--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -102,46 +102,12 @@
             </android.support.v7.widget.Toolbar>
         </android.support.design.widget.AppBarLayout>
 
-        <!--<android.support.v4.widget.NestedScrollView-->
-            <!--android:layout_width="match_parent"-->
-            <!--android:layout_height="match_parent"-->
-            <!--app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
-
-            <!---->
-
-
-        <!--</android.support.v4.widget.NestedScrollView>-->
-
         <FrameLayout
             android:id="@+id/container_statuses"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/appbar"
-            android:background="@color/colorBgNormal">
+            android:background="@color/colorBgNormal"/>
 
-        </FrameLayout>
-
-
-        <com.codez.collar.ui.ExpendButton
-            android:id="@+id/btn_add"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:layout_margin="16dp"
-            android:src="@drawable/ic_add_white"
-            app:backgroundTint="@color/colorHighlight"
-            app:fabSize="normal">
-
-        </com.codez.collar.ui.ExpendButton>
-        <!--<android.support.design.widget.FloatingActionButton-->
-        <!--android:id="@+id/btn_like"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:layout_gravity="bottom|end"-->
-        <!--android:layout_margin="16dp"-->
-        <!--android:src="@drawable/ic_add_white"-->
-        <!--app:backgroundTint="@color/colorPrimary"-->
-        <!--app:fabSize="normal" />-->
     </RelativeLayout>
 </layout>
