--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -79,7 +79,7 @@
 
     <color name="layout_item_sel">#E4E4E4</color>
     <color name="layout_item_nor">@color/colorItemNormal</color>
-    <color name="layout_item_sel_night">#E4E4E4</color>
+    <color name="layout_item_sel_night">#ff333333</color>
     <color name="layout_item_nor_night">@color/colorItemNormal_night</color>
 
     <color name="bgExpendBtn">#33000000</color>
