--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -22,6 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 android:background="@color/colorToolbarBg"
+                android:clickable="true"
+                android:foreground="?android:attr/selectableItemBackground"
                 app:contentInsetStart="0dp">
                 <RelativeLayout
                     android:id="@+id/ll"
