--- a/app/src/main/res/layout/item_direct_msg.xml
+++ b/app/src/main/res/layout/item_direct_msg.xml
@@ -15,6 +15,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/layout_item"
+        android:foreground="?android:attr/selectableItemBackground"
         android:orientation="vertical">
         <RelativeLayout
             android:id="@+id/rl_account"
