设置title颜色，以适应夜间模式

--- a/app/src/main/res/layout/activity_base_list.xml
+++ b/app/src/main/res/layout/activity_base_list.xml
@@ -25,8 +25,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="?android:attr/actionBarSize"
                 android:background="@color/colorToolbarBg"
-                app:contentInsetStart="0dp"
-                app:popupTheme="@style/AppTheme.PopupOverlay"
+                app:titleTextColor="@color/colorToolbarText"
                 app:titleTextAppearance="@style/Toolbar.TitleText" />
         </android.support.design.widget.AppBarLayout>
 
