--- a/app/src/main/res/layout/item_user_album.xml
+++ b/app/src/main/res/layout/item_user_album.xml
@@ -15,7 +15,7 @@
             android:id="@+id/iv_pic"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#eee"
+            android:background="@color/colorBgNormal"
             android:albumUrl="@{bean.thumbnail_pic}"
             android:definition="@{`bmiddle`}"
             android:adjustViewBounds="true"
