--- a/app/src/main/res/drawable/layout_item_radius.xml
+++ b/app/src/main/res/drawable/layout_item_radius.xml
@@ -1,22 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:state_pressed="true">
-        <shape>
-            <corners
-                android:radius="2dp"/>
-            <solid
-                android:color="@color/layout_item_sel"/>
-        </shape>
-    </item>
-    <item android:state_pressed="false">
-        <shape>
-            <corners
-                android:radius="2dp"/>
-            <solid
-                android:color="@color/layout_item_nor"/>
-        </shape>
-    </item>
+    <!--<item android:state_pressed="true">-->
+        <!--<shape>-->
+            <!--<corners-->
+                <!--android:radius="2dp"/>-->
+            <!--<solid-->
+                <!--android:color="@color/layout_item_sel"/>-->
+        <!--</shape>-->
+    <!--</item>-->
+    <!--<item android:state_pressed="false">-->
+        <!--<shape>-->
+            <!--<corners-->
+                <!--android:radius="2dp"/>-->
+            <!--<solid-->
+                <!--android:color="@color/layout_item_nor"/>-->
+        <!--</shape>-->
+    <!--</item>-->
     <item>
         <shape>
             <corners
