用户详情界面，头部背景半透明遮罩

--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -56,9 +56,10 @@
                             android:background="#eee"
                             android:imageUrl="@{user.cover_image_phone}"/>
                         <View
+                            android:id="@+id/view_mask"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
-                            android:background="#44ffffff"/>
+                            android:background="@color/colorItemNormal"/>
                     </FrameLayout>
 
                     <de.hdodenhof.circleimageview.CircleImageView
